[package]
name = "axum-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.190", features = ["derive"]}
tracing-subscriber = "0.3.17"
nanoid = "0.4.0"
async-trait = "0.1.74"
tower = "0.4.13"
tower-layer = "0.3.2"